Update imágenes máquinas

--- a/maquinas.html
+++ b/maquinas.html
@@ -84,8 +84,7 @@
             <div class="programas-grid">
                 <div class="programa-card">
                     <div class="programa-image">
-                        <img src="/placeholder.svg?height=200&width=300" alt="Máquinas de cardio">
-                        <div class="programa-badge">Premium</div>
+                        <img src="img maquinas/maquinas_cardio.png" alt="Máquinas de cardio">
                     </div>
                     <div class="programa-content">
                         <h3>Máquinas de Cardio</h3>
@@ -100,15 +99,12 @@
                             </div>
                         </div>
                         <p>Nuestras máquinas de cardio incluyen cintas de correr, elípticas, bicicletas estáticas y escaladoras de última generación con pantallas integradas y programas personalizables.</p>
-                        <a href="#" class="programa-button">
-                            Ver detalles <i class="fas fa-arrow-right"></i>
-                        </a>
                     </div>
                 </div>
 
                 <div class="programa-card">
                     <div class="programa-image">
-                        <img src="/placeholder.svg?height=200&width=300" alt="Máquinas de fuerza">
+                        <img src="img maquinas/maquinas_fuerza.png" alt="Máquinas de fuerza">
                     </div>
                     <div class="programa-content">
                         <h3>Máquinas de Fuerza</h3>
@@ -123,16 +119,12 @@
                             </div>
                         </div>
                         <p>Equipamiento completo para trabajar todos los grupos musculares con máquinas selectorizadas, poleas, prensas y equipos de carga guiada para un entrenamiento seguro y efectivo.</p>
-                        <a href="#" class="programa-button">
-                            Ver detalles <i class="fas fa-arrow-right"></i>
-                        </a>
                     </div>
                 </div>
 
                 <div class="programa-card">
                     <div class="programa-image">
-                        <img src="/placeholder.svg?height=200&width=300" alt="Peso libre">
-                        <div class="programa-badge">Nuevo</div>
+                        <img src="img maquinas/maquinas_mancuernas.png" alt="Peso libre">
                     </div>
                     <div class="programa-content">
                         <h3>Peso Libre</h3>
@@ -147,15 +139,12 @@
                             </div>
                         </div>
                         <p>Amplia selección de mancuernas, barras, discos y kettlebells de diferentes pesos para entrenamientos versátiles y adaptados a todos los niveles de fuerza.</p>
-                        <a href="#" class="programa-button">
-                            Ver detalles <i class="fas fa-arrow-right"></i>
-                        </a>
                     </div>
                 </div>
 
                 <div class="programa-card">
                     <div class="programa-image">
-                        <img src="/placeholder.svg?height=200&width=300" alt="Equipamiento funcional">
+                        <img src="img maquinas/maquinas_funcional.png" alt="Equipamiento funcional">
                     </div>
                     <div class="programa-content">
                         <h3>Equipamiento Funcional</h3>
@@ -170,9 +159,6 @@
                             </div>
                         </div>
                         <p>Zona equipada con TRX, bandas elásticas, balones medicinales, cajones pliométricos y otros accesorios para entrenamientos funcionales y de alta intensidad.</p>
-                        <a href="#" class="programa-button">
-                            Ver detalles <i class="fas fa-arrow-right"></i>
-                        </a>
                     </div>
                 </div>
 
@@ -193,15 +179,12 @@
                             </div>
                         </div>
                         <p>Área de boxeo con sacos de diferentes pesos, peras rápidas, guantes, protectores y un ring de entrenamiento para practicar técnicas de combate y mejorar tu condición física.</p>
-                        <a href="#" class="programa-button">
-                            Ver detalles <i class="fas fa-arrow-right"></i>
-                        </a>
                     </div>
                 </div>
 
                 <div class="programa-card">
                     <div class="programa-image">
-                        <img src="/placeholder.svg?height=200&width=300" alt="Área de estiramiento">
+                        <img src="img maquinas/maquinas_estiramientos.png" alt="Área de estiramiento">
                     </div>
                     <div class="programa-content">
                         <h3>Área de Estiramiento</h3>
@@ -216,9 +199,6 @@
                             </div>
                         </div>
                         <p>Espacio dedicado con colchonetas, rodillos de espuma, pelotas de masaje y otros accesorios para estiramientos, recuperación muscular y ejercicios de movilidad.</p>
-                        <a href="#" class="programa-button">
-                            Ver detalles <i class="fas fa-arrow-right"></i>
-                        </a>
                     </div>
                 </div>
             </div>
