--- a/galeria.html
+++ b/galeria.html
@@ -1449,7 +1449,7 @@
                     <div class="galeria-item" data-categoria="instalaciones">
                         <div class="galeria-categoria categoria-instalaciones">Instalaciones</div>
                         <div class="galeria-img-container">
-                            <img src="/placeholder.svg?height=600&width=800" alt="Área de pesas" class="galeria-img">
+                            <img src="img galeria/galeria_pesas.png" alt="Área de pesas" class="galeria-img">
                             <div class="galeria-overlay">
                                 <div class="galeria-overlay-btn">
                                     <i class="fas fa-search-plus"></i>
@@ -1491,7 +1491,7 @@
                     <div class="galeria-item" data-categoria="eventos">
                         <div class="galeria-categoria categoria-eventos">Eventos</div>
                         <div class="galeria-img-container">
-                            <img src="/placeholder.svg?height=600&width=800" alt="Competencia de fitness" class="galeria-img">
+                            <img src="img galeria/galeria_fiesta.png" alt="Competencia de fitness" class="galeria-img">
                             <div class="galeria-overlay">
                                 <div class="galeria-overlay-btn">
                                     <i class="fas fa-search-plus"></i>
@@ -1499,11 +1499,11 @@
                             </div>
                         </div>
                         <div class="galeria-info">
-                            <h3>Competencia Anual</h3>
-                            <p>Nuestra competencia anual reúne a los mejores atletas de la comunidad fitness.</p>
+                            <h3>Fiesta de Primavera</h3>
+                            <p>Cada cierto tiempo disfrutamos del inicio de la primavera.</p>
                             <div class="galeria-fecha">
                                 <i class="far fa-calendar-alt"></i>
-                                <span>Marzo 2025</span>
+                                <span>Marzo 2024</span>
                             </div>
                         </div>
                     </div>
@@ -1554,7 +1554,7 @@
                     <div class="galeria-item" data-categoria="entrenamiento">
                         <div class="galeria-categoria categoria-entrenamiento">Entrenamiento</div>
                         <div class="galeria-img-container">
-                            <img src="/placeholder.svg?height=600&width=800" alt="Clase de spinning" class="galeria-img">
+                            <img src="img galeria/galeria_equipamiento.png" alt="Clase de spinning" class="galeria-img">
                             <div class="galeria-overlay">
                                 <div class="galeria-overlay-btn">
                                     <i class="fas fa-search-plus"></i>
@@ -1562,8 +1562,8 @@
                             </div>
                         </div>
                         <div class="galeria-info">
-                            <h3>Clase de Spinning</h3>
-                            <p>Nuestras clases de spinning te ayudarán a mejorar tu resistencia cardiovascular.</p>
+                            <h3>Equipamiento</h3>
+                            <p>Contamos con equipamientos óptimos y de buena calidad para tus entrenamientos.</p>
                             <div class="galeria-fecha">
                                 <i class="far fa-calendar-alt"></i>
                                 <span>Junio 2025</span>
@@ -1572,10 +1572,10 @@
                     </div>
                     
                     <!-- Imagen 7 -->
-                    <div class="galeria-item" data-categoria="eventos">
-                        <div class="galeria-categoria categoria-eventos">Eventos</div>
+                    <div class="galeria-item" data-categoria="instalaciones">
+                        <div class="galeria-categoria categoria-instalaciones">instalaciones</div>
                         <div class="galeria-img-container">
-                            <img src="/placeholder.svg?height=600&width=800" alt="Maratón benéfica" class="galeria-img">
+                            <img src="img galeria/galeria_airelibre.png" alt="Maratón benéfica" class="galeria-img">
                             <div class="galeria-overlay">
                                 <div class="galeria-overlay-btn">
                                     <i class="fas fa-search-plus"></i>
@@ -1583,11 +1583,11 @@
                             </div>
                         </div>
                         <div class="galeria-info">
-                            <h3>Maratón Benéfica</h3>
-                            <p>Organizamos eventos benéficos para apoyar causas sociales en nuestra comunidad.</p>
+                            <h3>Aire Libre</h3>
+                            <p>Contamos con una amplia instalación al aire libre.</p>
                             <div class="galeria-fecha">
                                 <i class="far fa-calendar-alt"></i>
-                                <span>Julio 2025</span>
+                                <span>enero 2025</span>
                             </div>
                         </div>
                     </div>
@@ -1617,7 +1617,7 @@
                     <div class="galeria-item" data-categoria="equipo">
                         <div class="galeria-categoria categoria-equipo">Equipo</div>
                         <div class="galeria-img-container">
-                            <img src="/placeholder.svg?height=600&width=800" alt="Staff de recepción" class="galeria-img">
+                            <img src="img galeria/galeria_staff.png" alt="Staff de recepción" class="galeria-img">
                             <div class="galeria-overlay">
                                 <div class="galeria-overlay-btn">
                                     <i class="fas fa-search-plus"></i>
