Update imágenes galeria y maquinas

--- a/galeria.html
+++ b/galeria.html
@@ -1596,7 +1596,7 @@
                     <div class="galeria-item" data-categoria="instalaciones">
                         <div class="galeria-categoria categoria-instalaciones">Instalaciones</div>
                         <div class="galeria-img-container">
-                            <img src="/placeholder.svg?height=600&width=800" alt="Vestuarios" class="galeria-img">
+                            <img src="img maquinas/maquinas_estiramientos.png" alt="Vestuarios" class="galeria-img">
                             <div class="galeria-overlay">
                                 <div class="galeria-overlay-btn">
                                     <i class="fas fa-search-plus"></i>
@@ -1604,11 +1604,11 @@
                             </div>
                         </div>
                         <div class="galeria-info">
-                            <h3>Vestuarios Modernos</h3>
-                            <p>Vestuarios amplios y modernos con todas las comodidades para nuestros miembros.</p>
+                            <h3>Clases de zumba</h3>
+                            <p>Clases de zumba con entrenamiento funcional.</p>
                             <div class="galeria-fecha">
                                 <i class="far fa-calendar-alt"></i>
-                                <span>Agosto 2025</span>
+                                <span>Agosto 2023</span>
                             </div>
                         </div>
                     </div>
