--- a/maquinas.html
+++ b/maquinas.html
@@ -164,21 +164,17 @@
 
                 <div class="programa-card">
                     <div class="programa-image">
-                        <img src="/placeholder.svg?height=200&width=300" alt="Equipamiento de boxeo">
+                        <img src="img galeria/galeria_airelibre.png" alt="Equipamiento de boxeo">
                     </div>
                     <div class="programa-content">
-                        <h3>Equipamiento de Boxeo</h3>
+                        <h3>Clases de zumba</h3>
                         <div class="programa-details">
-                            <div class="programa-detail">
-                                <i class="fas fa-fist-raised"></i>
-                                <span>Profesional</span>
-                            </div>
                             <div class="programa-detail">
                                 <i class="fas fa-shield-alt"></i>
                                 <span>Alta resistencia</span>
                             </div>
                         </div>
-                        <p>Área de boxeo con sacos de diferentes pesos, peras rápidas, guantes, protectores y un ring de entrenamiento para practicar técnicas de combate y mejorar tu condición física.</p>
+                        <p>Clases de zumba para relajar el cuerpo y alegrar la vida. Con espacio y elementos esenciales para poder entrenar de la manera más recomendable y efectiva posible.</p>
                     </div>
                 </div>
 
@@ -203,9 +199,6 @@
                 </div>
             </div>
         </section>
-
-        <!-- Sección de Planes -->
-        
 
         <!-- Sección de Contacto -->
         <section id="contacto" class="contacto-section">
