--- a/inscripcion.html
+++ b/inscripcion.html
@@ -246,7 +246,7 @@
                         <select id="plan" name="plan" required>
                             <option value="">Elige un plan</option>
                             <option value="Normal">PLAN INDIVIDUAL 150.000 Gs/mes</option>
-                            <option value="2 meses">PLAN TRIO FIT 390.000 Gs/mes</option>
+                            <option value="Trio Fit">PLAN TRIO FIT 390.000 Gs/mes</option>
                         </select>
                     </div>
                     
@@ -326,6 +326,14 @@
                         <i class="fas fa-envelope"></i>
                         <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="5831363e371835393b2a373f2135763b3735">info@macrogymfitness.com</a></p>
                     </div>
+                </div>
+                <div class="footer-newsletter">
+                    <h3>Suscripción al boletín informativo</h3>
+                    <p>Recibe noticias, promociones y consejos de fitness por correo electrónico.</p>
+                    <form class="newsletter-form">
+                        <input type="email" placeholder="Correo Electronico">
+                        <button type="submit"><i class="fas fa-arrow-right"></i></button>
+                    </form>
                 </div>
             </div>
             <div class="footer-social">
