--- a/admin.html
+++ b/admin.html
@@ -124,7 +124,7 @@
                                 <label for="renewPlan">Plan:</label>
                                 <select id="renewPlan" required>
                                     <option value="Normal">Normal - ₲ 150.000/mes</option>
-                                    <option value="1 mes">Trio Fit - ₲ 390.000/mes</option>
+                                    <option value="Trio Fit">Trio Fit - ₲ 390.000/mes</option>
                                 </select>
                             </div>
                             <div class="form-group">
