update imágenes hero

--- a/Index.html
+++ b/Index.html
@@ -58,12 +58,12 @@
         <!-- Hero Section con imagen a pantalla completa -->
         <div class="hero-section">
             <div class="hero-background">
-                <img src="img index/hero1.png" alt="Entrenamiento en MacroGym">
+                <img src="img index/hero_index.png" alt="Entrenamiento en MacroGym">
             </div>
             <div class="hero-content">
                 <h1 class="hero-title">TRANSFORMA TU CUERPO<br>TRANSFORMA TU VIDA</h1>
                 <p class="hero-subtitle">El mejor gimnasio para alcanzar tus objetivos fitness</p>
-                <a href="#contacto" class="hero-button">COMIENZA HOY</a>
+                <a href="clientes.html" class="hero-button">COMIENZA HOY</a>
             </div>
         </div>
     </header>
