--- a/Planes.html
+++ b/Planes.html
@@ -1693,7 +1693,7 @@
         <!-- Hero Section con imagen a pantalla completa -->
         <div class="hero-section">
             <div class="hero-background">
-                <img src="img/imagen1.jpg" alt="Entrenamiento en MacroGym">
+                <img src="img/hero_planes.png" alt="Entrenamiento en MacroGym">
             </div>
             <div class="hero-content">
                 <h1 class="hero-title">NUESTROS PLANES</h1>
