--- a/galeria.html
+++ b/galeria.html
@@ -1424,7 +1424,7 @@
         <!-- Hero Section con imagen a pantalla completa -->
         <div class="hero-section">
             <div class="hero-background">
-                <img src="img/imagen1.jpg" alt="Galería MacroGym">
+                <img src="img/hero_galeria.png" alt="Galería MacroGym">
             </div>
             <div class="hero-content">
                 <h1 class="hero-title">NUESTRA GALERÍA</h1>
