--- a/maquinas.html
+++ b/maquinas.html
@@ -58,7 +58,7 @@
         <!-- Hero Section con imagen a pantalla completa -->
         <div class="hero-section">
             <div class="hero-background">
-                <img src="img/imagen1.jpg" alt="Entrenamiento en MacroGym">
+                <img src="img/hero_maquinas.png" alt="Entrenamiento en MacroGym">
             </div>
             <div class="hero-content">
                 <h1 class="hero-title">NUESTRO EQUIPAMIENTO</h1>
