--- a/admin.html
+++ b/admin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MACRO GYM - Panel de Administración</title>
+    <link rel="icon" type="image/png" href="img/logo_icono.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="admin-styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
