Update hero wikifitness

--- a/fitness-wiki.html
+++ b/fitness-wiki.html
@@ -47,7 +47,7 @@
         <!-- Hero Section -->
         <div class="hero-section wiki-hero">
             <div class="hero-background">
-                <img src="img/imagen1.jpg" alt="Fitness Wiki">
+                <img src="img/hero_fitness.png" alt="Fitness Wiki">
             </div>
             <div class="hero-content">
                 <h1 class="hero-title">WIKI FITNESS</h1>
