Update imágenes tiny

--- a/Index.html
+++ b/Index.html
@@ -107,7 +107,7 @@
                 </div>
                 <div class="card" data-aos="fade-up" data-aos-delay="300">
                     <div class="card-image">
-                        <img src="img index/funcional.webp" alt="Área funcional">
+                        <img src="img index/funcional.jpg" alt="Área funcional">
                         <div class="card-overlay">
                         </div>
                     </div>
@@ -123,7 +123,7 @@
         <section id="boxeo" class="boxeo">
             <div class="boxeo-container">
                 <div class="boxeo-imagen" data-aos="fade-right">
-                    <img src="img index/musculacion.webp" alt="Clases de boxeo">
+                    <img src="img index/musculacion.jpg" alt="Clases de boxeo">
                     <div class="boxeo-badge">
                         <span>ÚNICO</span>
                     </div>
@@ -224,7 +224,7 @@
                     <!-- Carta 3 -->
                     <div class="entrenador-card" data-aos="fade-up" data-aos-delay="100">
                         <div class="entrenador-img">
-                            <img src="img galeria/galeria_staff.png" alt="Entrenador Jeddi Díaz">
+                            <img src="img galeria/galeria_staff.jpg" alt="Entrenador Jeddi Díaz">
                             <div class="entrenador-social-overlay">
                             </div>
                         </div>
