--- a/galeria.html
+++ b/galeria.html
@@ -1682,7 +1682,7 @@
                     <div class="galeria-item" data-categoria="instalaciones">
                         <div class="galeria-categoria categoria-instalaciones">Instalaciones</div>
                         <div class="galeria-img-container">
-                            <img src="img galeria/galeria_pesas.png" alt="Área de pesas" class="galeria-img">
+                            <img src="img galeria/galeria_pesas.jpg" alt="Área de pesas" class="galeria-img">
                             <div class="galeria-overlay">
                                 <div class="galeria-overlay-btn">
                                     <i class="fas fa-search-plus"></i>
@@ -1703,7 +1703,7 @@
                     <div class="galeria-item" data-categoria="entrenamiento">
                         <div class="galeria-categoria categoria-entrenamiento">Entrenamiento</div>
                         <div class="galeria-img-container">
-                            <img src="img galeria/entrenamiento_funcional.webp" alt="Entrenamiento funcional" class="galeria-img">
+                            <img src="img galeria/entrenamiento_funcional.jpg" alt="Entrenamiento funcional" class="galeria-img">
                             <div class="galeria-overlay">
                                 <div class="galeria-overlay-btn">
                                     <i class="fas fa-search-plus"></i>
@@ -1724,7 +1724,7 @@
                     <div class="galeria-item" data-categoria="eventos">
                         <div class="galeria-categoria categoria-eventos">Eventos</div>
                         <div class="galeria-img-container">
-                            <img src="img galeria/galeria_fiesta.png" alt="Competencia de fitness" class="galeria-img">
+                            <img src="img galeria/galeria_fiesta.jpg" alt="Competencia de fitness" class="galeria-img">
                             <div class="galeria-overlay">
                                 <div class="galeria-overlay-btn">
                                     <i class="fas fa-search-plus"></i>
@@ -1745,7 +1745,7 @@
                     <div class="galeria-item" data-categoria="instalaciones">
                         <div class="galeria-categoria categoria-instalaciones">Instalaciones</div>
                         <div class="galeria-img-container">
-                            <img src="img galeria/cardio_galeria.webp" alt="Área cardiovascular" class="galeria-img">
+                            <img src="img galeria/cardio_galeria.jpg" alt="Área cardiovascular" class="galeria-img">
                             <div class="galeria-overlay">
                                 <div class="galeria-overlay-btn">
                                     <i class="fas fa-search-plus"></i>
@@ -1787,7 +1787,7 @@
                     <div class="galeria-item" data-categoria="entrenamiento">
                         <div class="galeria-categoria categoria-entrenamiento">Entrenamiento</div>
                         <div class="galeria-img-container">
-                            <img src="img galeria/galeria_equipamiento.png" alt="Clase de spinning" class="galeria-img">
+                            <img src="img galeria/galeria_equipamiento.jpg" alt="Clase de spinning" class="galeria-img">
                             <div class="galeria-overlay">
                                 <div class="galeria-overlay-btn">
                                     <i class="fas fa-search-plus"></i>
@@ -1808,7 +1808,7 @@
                     <div class="galeria-item" data-categoria="instalaciones">
                         <div class="galeria-categoria categoria-instalaciones">instalaciones</div>
                         <div class="galeria-img-container">
-                            <img src="img galeria/galeria_airelibre.png" alt="Maratón benéfica" class="galeria-img">
+                            <img src="img galeria/galeria_airelibre.jpg" alt="Maratón benéfica" class="galeria-img">
                             <div class="galeria-overlay">
                                 <div class="galeria-overlay-btn">
                                     <i class="fas fa-search-plus"></i>
@@ -1850,7 +1850,7 @@
                     <div class="galeria-item" data-categoria="equipo">
                         <div class="galeria-categoria categoria-equipo">Equipo</div>
                         <div class="galeria-img-container">
-                            <img src="img galeria/galeria_staff.png" alt="Staff de recepción" class="galeria-img">
+                            <img src="img galeria/galeria_staff.jpg" alt="Staff de recepción" class="galeria-img">
                             <div class="galeria-overlay">
                                 <div class="galeria-overlay-btn">
                                     <i class="fas fa-search-plus"></i>
@@ -1899,7 +1899,7 @@
                             </div>
                         </div>
                         <div class="instagram-card-image">
-                            <img src="img galeria/galeria_pesas.png" alt="Entrenamiento de fuerza">
+                            <img src="img galeria/galeria_pesas.jpg" alt="Entrenamiento de fuerza">
                         </div>
                         <div class="instagram-card-actions">
                             <div class="instagram-actions-primary">
@@ -1937,7 +1937,7 @@
                             </div>
                         </div>
                         <div class="instagram-card-image">
-                            <img src="img galeria/entrenamiento_funcional.webp" alt="Clase de entrenamiento funcional">
+                            <img src="img galeria/entrenamiento_funcional.jpg" alt="Clase de entrenamiento funcional">
                         </div>
                         <div class="instagram-card-actions">
                             <div class="instagram-actions-primary">
@@ -1975,7 +1975,7 @@
                             </div>
                         </div>
                         <div class="instagram-card-image">
-                            <img src="img galeria/galeria_fiesta.png" alt="Evento especial">
+                            <img src="img galeria/galeria_fiesta.jpg" alt="Evento especial">
                         </div>
                         <div class="instagram-card-actions">
                             <div class="instagram-actions-primary">
