--- a/maquinas.html
+++ b/maquinas.html
@@ -125,7 +125,7 @@
 
                 <div class="programa-card">
                     <div class="programa-image">
-                        <img src="img maquinas/maquinas_mancuernas.png" alt="Peso libre">
+                        <img src="img maquinas/maquinas_mancuernas.jpg" alt="Peso libre">
                     </div>
                     <div class="programa-content">
                         <h3>Peso Libre</h3>
@@ -145,7 +145,7 @@
 
                 <div class="programa-card">
                     <div class="programa-image">
-                        <img src="img maquinas/maquinas_funcional.png" alt="Equipamiento funcional">
+                        <img src="img maquinas/maquinas_funcional.jpg" alt="Equipamiento funcional">
                     </div>
                     <div class="programa-content">
                         <h3>Equipamiento Funcional</h3>
@@ -165,7 +165,7 @@
 
                 <div class="programa-card">
                     <div class="programa-image">
-                        <img src="img galeria/galeria_airelibre.png" alt="Equipamiento de boxeo">
+                        <img src="img galeria/galeria_airelibre.jpg" alt="Equipamiento de boxeo">
                     </div>
                     <div class="programa-content">
                         <h3>Clases de zumba</h3>
