--- a/Index.html
+++ b/Index.html
@@ -383,6 +383,11 @@
                     </div>
                     <p>Nos encantaría conocer tu opinión, déjanos un mensaje o llámanos a nuestros números habilitados.</p>
                     <form id="contactForm" action="https://formspree.io/f/mvgkzaln" method="POST">
+                        <!-- Campo honeypot invisible para los usuarios pero visible para los bots -->
+                        <div class="honeypot-field" style="display:none !important; visibility:hidden; opacity:0; position:absolute; left:-9999px;">
+                            <label for="website">Website (No completar este campo)</label>
+                            <input type="text" name="website" id="website" tabindex="-1" autocomplete="off">
+                        </div>
                         <div class="form-group">
                             <div class="form-icon">
                                 <i class="fas fa-user"></i>
@@ -418,7 +423,7 @@
                             <i class="fas fa-paper-plane"></i>
                         </button>
                         <div id="message" class="form-message"></div>
-                    </form>
+                    </form>                    
                 </div>
             </div>
         </div>
@@ -503,5 +508,20 @@
             });
         });
     </script>
+    <script>
+        // Validación del formulario con honeypot
+        document.getElementById('contactForm').addEventListener('submit', function(event) {
+            // Verificar si el campo honeypot está vacío
+            const honeypotField = document.getElementById('website');
+            if (honeypotField.value !== '') {
+                // Si el campo honeypot tiene contenido, es probablemente un bot
+                event.preventDefault();
+                console.log('Envío de formulario bloqueado: posible bot detectado');
+                return false;
+            }
+            // Si llegamos aquí, el formulario es válido (no es un bot)
+            return true;
+        });
+    </script>    
 </body>
 </html>
