--- a/Index.html
+++ b/Index.html
@@ -148,7 +148,7 @@
                             <span>Equipamiento profesional</span>
                         </div>
                     </div>
-                    <a href="#" class="boton-redondeado">Conoce más <i class="fas fa-arrow-right"></i></a>
+                    <a href="galeria.html" class="boton-redondeado">Conoce más <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
         </section>
