--- a/inscripcion.html
+++ b/inscripcion.html
@@ -126,13 +126,13 @@
         }
 
     .error-message {
-        color: red;
+        color: rgba(255, 0, 0, 0.767);
         font-size: 0.8rem;
         margin-top: 5px;
     }
     
     input:invalid, select:invalid {
-        border-color: red !important;
+        border-color: rgb(0, 255, 221) !important;
     }
     
     /* Estilo para campos con validación correcta */
