--- a/clientes.html
+++ b/clientes.html
@@ -262,7 +262,7 @@
     }
     
     input:invalid, select:invalid {
-        border-color: red !important;
+        border-color: rgb(0, 119, 255) !important;
     }
     
     /* Estilo para campos con validación correcta */
