Update footer cambio de boxeo

--- a/Index.html
+++ b/Index.html
@@ -442,7 +442,7 @@
                     <h3>Enlaces rápidos</h3>
                     <ul>
                         <li><a href="#entrena_aqui">Nuestro Gimnasio</a></li>
-                        <li><a href="#boxeo">Clases de Boxeo</a></li>
+                        <li><a href="#boxeo">Musculación</a></li>
                         <li><a href="#entrenadores">Entrenadores</a></li>
                         <li><a href="#contacto">Contacto</a></li>
                     </ul>
