--- a/inscripcion.html
+++ b/inscripcion.html
@@ -308,7 +308,7 @@
                     <h3>Enlaces rápidos</h3>
                     <ul>
                         <li><a href="Index.html#entrena_aqui">Nuestro Gimnasio</a></li>
-                        <li><a href="Index.html#boxeo">Clases de Boxeo</a></li>
+                        <li><a href="Index.html#boxeo">Musculación</a></li>
                         <li><a href="Index.html#entrenadores">Entrenadores</a></li>
                         <li><a href="Index.html#contacto">Contacto</a></li>
                     </ul>
