--- a/maquinas.html
+++ b/maquinas.html
@@ -277,7 +277,7 @@
                     <h3>Enlaces rápidos</h3>
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="#maquinas">Nuestras Máquinas</a></li>
+                        <li><a href="Index.html#boxeo">Musculación</a></li>
                         <li><a href="#planes">Planes</a></li>
                         <li><a href="#contacto">Contacto</a></li>
                     </ul>
