--- a/calculadora-imc.html
+++ b/calculadora-imc.html
@@ -1145,7 +1145,7 @@
                         <li><a href="Index.html">Inicio</a></li>
                         <li><a href="maquinas.html">Máquinas</a></li>
                         <li><a href="inscripcion.html">Inscripción</a></li>
-                        <li><a href="#">Calculadora IMC</a></li>
+                        <li><a href="Planes.html">Planes</a></li>
                     </ul>
                 </div>
                 <div class="footer-contact">
